--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <!--- HERO SECTION------------------------------------------------------------->
    <div class="hero">
        <h1>Hello,<br>my name is Emily Heyrman</h1>
-        <h2>I'm a UX/UI Designer bassed in Upper Michigan.<br> Some people look for beautiful places, others make a place beautiful.</h2>
+        <h2>I'm a UX/UI Designer based in Upper Michigan.<br> Some people look for beautiful places, others make a place beautiful.</h2>
           <img class="feathers" src="images/feathers-homepage.jpg" alt="Emily Heyrman Logo"/>
    </div>
 <!--- MY STORY (JOURNEY) SECTION----------------------------------------------->
