--- a/project.html
+++ b/project.html
@@ -8,7 +8,7 @@
 <!--- FONT ----------------------------------------------------------------->
 <link href='https://fonts.googleapis.com/css?family=Montserrat:100,400,900'
   rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=SourceSansPro:300,400,900'
+<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,900'
   rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Raleway:100,400,900'
   rel='stylesheet' type='text/css'>
@@ -70,12 +70,12 @@
           <li class="ProblemLine-1">Collaboration</li>
           <li class="problem-8">Upload new files</li>
        </ul>
-        <h3 class="bottom-line-problem">This is all problems that needed to be solved for this project. </h3>
+        <h3 class="bottom-line-problem">These are all problems that needed to be solved for this project. </h3>
   </section>
 <!-- SOLUTION SECTION --------------------------------------------------------->
 <section class="Solution">
    <h1>Solution</h1>
-     <p>A easy to use cloud storage survice called Save Safe. This application is great for every type of user that allows you to save, edit and organize your data on the go. </p>
+     <p>A easy to use cloud storage service called Save Safe. This application is great for every type of user that allows you to save, edit and organize your data on the go. </p>
 </section>
 <!-- PROCESS SECTION ---------------------------------------------------------->
 <section class="Process-Section">
@@ -91,19 +91,19 @@
     <li class="process-1">Analysis of Testing </li>
     <li class="process-8">Mockups </li>
     <li class="process-1">Branding Work </li>
-    <li class="process-10">Typface </li>
+    <li class="process-10">Typeface </li>
     <li class="process-1">Prototype</li>
   </ul>
 </section>
 <!-- USER SURVEY SECTION ------------------------------------------------------>
 <section class="User-Surveys-Section">
   <h1>User Surveys</h1>
-     <p>I conducted user surveys to help more understand what the users want in a cloud storage application. During this test it gave me inside on if this application will be used for desktop or desktop and mobile. It also helped me find what our target audience will be for this application. I asked the users about collaboration and what every user is looking for in there cloud storage application. This is a great tool to get started figuring out what needs to be in each site.</p>
+     <p>I conducted user surveys to help better understand what the users want in a cloud storage application. During this test it gave me inside on if this application will be used for desktop or desktop and mobile. It also helped me find what our target audience will be for this application. I asked the users about collaboration and what every user is looking for in their cloud storage application. This is a great tool to get started figuring out what needs to be in each site.</p>
 </section>
 <!-- SWOT ANALYSIS SECTION ---------------------------------------------------->
 <section class="SWOT-Analysis-Section">
   <h1>SWOT Analysis</h1>
-     <p>I did a comptitive analysis on Google Drive, Dropbox and Pinterest. I learned what works and what doesnt work for the users. Doing these analysis allow me be better uderstand what the users need for Save Safe.</p>
+     <p>I did a competitive analysis on Google Drive, Dropbox and Pinterest. I learned what works and what doesn’t work for the users. Doing these analysis allow me be better understand what the users need for Save Safe.</p>
 </section>
 <!-- PERSONA SECTION ---------------------------------------------------------->
 <section class="Personas-Section">
@@ -115,7 +115,7 @@
 <!-- USER STORIES SECTION ----------------------------------------------------->
 <section class="User-Stories-Section">
   <h1>User Stories</h1>
-     <p>When creating the user stories for this application I wanted to display the main functions a user may do during the presents on this application. This gives me the ability to see what needs to be done on the application and what is the main goals for the users. This gives me a easier way to break down what pages are needed to develop this cloud storage service.</p>
+     <p>When creating the user stories for this application I wanted to display the main functions a user may do during the use on this application. This gives me the ability to see what needs to be done on the application and what is the main goals for the users. This gives me an easier way to break down what pages are needed to develop this cloud storage service.</p>
 </section>
 <!-- USER FLOWS SECTION ------------------------------------------------------->
 <section class="User-Flows-Section">
@@ -127,7 +127,7 @@
 <!-- WIREFRAME SECTION -------------------------------------------------------->
 <section class="Wireframes-Section">
   <h1>Wireframes</h1>
-     <p>Wireframes are a great way to figure out if the user finds the layout simple or hard to understand without pudding a lot of effort into the design process of this application. </p>
+     <p>Wireframes are a great way to figure out if the user finds the layout simple or hard to understand without putting a lot of effort into the design process of this application. </p>
      <img class="Wireframe-image" src="images/wireframes-image.jpg" alt="Wireframe Section Image"/>
    <img class="Wireframe-Images" src="images/wireframes.png" alt="Wireframe Drawings"/>
 </section>
@@ -138,7 +138,7 @@
       <li class="test-1">Test 1</li>
       <li class="test-1-info">During the first test, the tester worked Through the functions well. The tester had a hard time understanding some of the names of the buttons so this is something I needed to go back and work on.</li>
       <li class="test-2">Test 2</li>
-      <li class="test-2-info">Overall this testers process went well. The tester didnt know how to organize photos, so I would like to figure out a better way to organize the photos into groups for the users.</li>
+      <li class="test-2-info">Overall this testers process went well. The tester didn't know how to organize photos, so I would like to figure out a better way to organize the photos into groups for the users.</li>
       <li class="test-3">Test 3</li>
       <li class="test-3-info">During this usability test I learned that I could work on the name of the buttons. For they where confusing for this tester. </li>
    </ul>
@@ -153,7 +153,7 @@
 <!-- BRANDING SECTION --------------------------------------------------------->
 <section class="Branding-Section">
   <h1>Branding</h1>
-      <p> At first glance I want the user to feel this security of this brand. I did a lot of sketches till I came up with the lock cloud logo. The logo with the  blue color scheme will give the users a feeling of trust and experiance. We would like to name the brand SAVE SAFE. The name Save Safe says it all about the brand and what this application is designed for, to save and keep safe. All the elements together will play great to deliver the feeling and message to the potential users that they can save everything in a safe and secure area with a easy and fresh feeling.</p>
+      <p> At first glance I want the user to feel this security of this brand. I did a lot of sketches until I came up with the lock cloud logo. The logo with the  blue color scheme will give the users a feeling of trust and experience. We would like to name the brand SAVE SAFE. The name Save Safe says it all about the brand and what this application is designed for, to save and keep safe. All the elements together will play great to deliver the feeling and message to the potential users that they can save everything in a safe and secure area with a easy and fresh feeling.</p>
    <img class="sketching-of-logo" src="images/sketching-for-logo.png" alt="Sketching for Logo Image"/>
    <img class="color-info" src="images/color-case-study.png" alt="Color Image"/>
    <img class="Mobile-logo-digital" src="images/logos-save-safe.png" alt="Logo Digital Image"/>
@@ -161,9 +161,9 @@
 <!-- TYPFACE SECTION ---------------------------------------------------------->
 <section class="Typeface-Section">
   <h1>Typeface</h1>
-     <p class="Plantagenet-Cherokee-font-into">I choose Plantagenet Cherokee as one of the options for the brand typeface because it is a serif humanist font. This font is dressy with the feet on all letters, when displayed in a capital display. This font also has uneven lines, witch gives it a feeling of strong and elegant all at the same time.</p>
+     <p class="Plantagenet-Cherokee-font-into">I chose Plantagenet Cherokee as one of the options for the brand typeface because it is a serif humanist font. This font is dressy with the feet on all letters, when displayed in a capital display. This font also has uneven lines, which gives it a feeling of strong and elegant all at the same time.</p>
      <p class="Plantagenet-Cherokee-font">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz 0123456789</p>
-     <p class="Ovo-font-info">I paired it with a complementary typeface that plays well with my brand typeface. I chose Ovo as the complementary typeface because it is also a elegant and strong font but with lines that are not so vag. This font is also a serif humanist with the feet also giving it a dressy feeling. </p>
+     <p class="Ovo-font-info">I paired it with a complementary typeface that plays well with my brand typeface. I chose Ovo as the complementary typeface because it is also an elegant and strong font but with lines that are not so vague. This font is also a serif humanist with the feet also giving it a dressy feeling. </p>
      <p class="Ovo-font">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz 0123456789</p>
 </section>
 <!-- PROTOTYPE SECTOIN -------------------------------------------------------->
@@ -177,9 +177,9 @@
   <h1>Analysis of Test</h1>
     <ul>
       <li class="test2-one">Test 1</li>
-      <li class="test2-one-info">Overall the test went very well. The tester didn’t have any issue with completing any of the tasks. The one thing that I thought of after going over all of the tests and questions asked. is the Drag and Drop page. This works well for a desktop layout but for mobile it doesn't work for the user. </li>
+      <li class="test2-one-info">Overall the test went very well. The tester didn’t have any issue with completing any of the tasks. The one thing that I thought of after going over all of the tests and questions asked, is the Drag and Drop page. This works well for a desktop layout but for mobile it doesn't work for the user. </li>
       <li class="test2-two">Test 2</li>
-      <li class="test2-two-info">After this test I went over all of my results. I found out that I don’t have a area where users can view groups of images. This would be a great thing to add to the dashboard page for the users. I am going to play with some idea on where to place this function to make it easy for the users to view.</li>
+      <li class="test2-two-info">After this test I went over all of my results. I found out that I don’t have an area where users can view groups of images. This would be a great thing to add to the dashboard page for the users. I am going to play with some ideas on where to place this function to make it easy for the users to view.</li>
       <li class="test2-three">Test 3</li>
       <li class="test2-three-info">During this test I wrote down some items that I need to look into to make it less confusing for the users. The name in the new link I need to review. The names on the buttons don’t seem to be clear to the users so I would like to look into better names for those buttons. Also the groups for images again. I need to find a good location for those groups to be located for the users.</li>
    </ul>
@@ -187,7 +187,7 @@
 <!-- CONCLUSION SECTION ------------------------------------------------------->
 <section class="Conclusion">
   <h1>Conclusion</h1>
-    <p>Save Safe was a project that taught me the importance of testing throughout this design process. User testing helped me to determine what needed to happen to make this application successful. Testing allowed for quick iteration and discovery of unidentified problems which resulted in a far improved final product and inspired a more informed solution. With research and more testing it allowed me to develop a great brand for Save Safe to develop a applocation that not only looks great for the users but works great also. </p>
+    <p>Save Safe was a project that taught me the importance of testing throughout this design process. User testing helped me to determine what needed to happen to make this application successful. Testing allowed for quick interaction and discovery of unidentified problems which resulted in a far improved final product and inspired a more informed solution. With research and more testing it allowed me to develop a great brand for Save Safe to develop an application that not only looks great for the users but works great also. </p>
 </section>
 <!--- LET'S TALK LINK FOOTER SECTION ------------------------------------------>
   <div class="footer">
