--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--- FONT ---------------------------------------------------------------->
     <link href='https://fonts.googleapis.com/css?family=Montserrat:100,400,900'
       rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=SourceSansPro:300,400,900'
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,900'
       rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Raleway:100,400,900'
       rel='stylesheet' type='text/css'>
