--- a/index.html
+++ b/index.html
@@ -39,31 +39,38 @@
         <ul class="menu">
           <li><a href='journey.html'>About</a></li>
           <li><a href='project.html'>Work</a></li>
-          <li><a href='images/resume'>Resume</a></li>
+          <li><a href="https://drive.google.com/file/d/1IN3a5cMirByidJ79lb_spfK-VHmEiCvX/view?usp=sharing" target="_blank">Resume</a><li>
           <li><a href='#Contact'>Contact</a></li>
        </ul>
       </header>
      </div>
 <!--- HERO SECTION------------------------------------------------------------->
    <div class="hero">
-       <h1>Hello,<br>my name is Emily Heyrman</h1>
-        <h2>I'm a UX/UI Designer based in Upper Michigan.<br> Some people look for beautiful places, others make a place beautiful.</h2>
+       <h1>Hello,<br>my name is <b class="bold">Emily Heyrman</b></h1>
+        <h2>I'm a <b class="bold">UX/UI Designer</b> based in <b class="bold">Upper Michigan.</b><br></h2>
+        <h3>"Some people look for beautiful places, others make a place beautiful."</h3>
           <img class="feathers" src="images/feathers-homepage.jpg" alt="Emily Heyrman Logo"/>
    </div>
+   <!--- SAVE SAFE CASE STUDY SECTION -------------------------------------------->
+     <div class="Save-Safe" id="Save-Safe-Section">
+         <h2>Save Safe</h2>
+         <p>Cloud storage app.</p>
+         <h3>UX/UI Designer | Prototype</h3>
+         <a class="Case-Study-Button" href="project.html">Case Study</a>
+         <a class="Prototype-Button" href="https://www.figma.com/proto/QVsmUi4h7M5WoKbPxkUsWfOB/Save-Safe-Desktop-Macbook-Pro?node-id=261%3A0&viewport=495%2C303%2C0.0218388&scaling=scale-down " target="_blank">Prototype</a>
+     </div>
+     <div class="save-safe-mobile-image" id="image-save-safe">
+       <img class="Save-Safe-Mobile" src="images/mobile-save-safe.jpg" alt="mobile-save-safe"/>
+</div>
 <!--- MY STORY (JOURNEY) SECTION----------------------------------------------->
         <div class="my-journey" id="Journey">
             <h2>The Story of Me</h2>
               <p>The journey that led me to<br>this exact moment</p>
               <a class="My-Life-Button" href="journey.html">My Life</a>
         </div>
-<!--- SAVE SAFE CASE STUDY SECTION -------------------------------------------->
-  <div class="Save-Safe" id="Save-Safe-Section">
-      <h2>Save Safe</h2>
-      <p>Cloud storage app.</p>
-      <h3>UX/UI Designer | Prototype</h3>
-      <a class="Case-Study-Button" href="project.html">Case Study</a>
-      <a class="Prototype-Button" href="https://www.figma.com/proto/QVsmUi4h7M5WoKbPxkUsWfOB/Save-Safe-Desktop-Macbook-Pro?node-id=261%3A0&viewport=495%2C303%2C0.0218388&scaling=scale-down ">Prototype</a>
-  </div>
+        <div class="my-story-image" id="my-story-image">
+          <img class="story-image" src="images/my-story-image.jpg" alt="mobile-story-image"/>
+        </div>
 <!--- LET'S TALK LINK FOOTER SECTION ------------------------------------------>
   <div class="footer">
     <footer class="lets-talk-links" id="Contact">
