--- a/project.html
+++ b/project.html
@@ -39,7 +39,7 @@ gtag('config', 'UA-141214791-1');
                 <ul class="menu">
                   <li><a href='journey.html'>About</a></li>
                   <li><a href='project.html'>Work</a></li>
-                  <li><a href='images/resume'>Resume</a></li>
+                  <li><a href="https://drive.google.com/file/d/1IN3a5cMirByidJ79lb_spfK-VHmEiCvX/view?usp=sharing" target="_blank">Resume</a><li>
                   <li><a href='#Contact'>Contact</a></li>
                 </ul>
               </header>
@@ -48,9 +48,13 @@ gtag('config', 'UA-141214791-1');
     <div class="hero-SaveSafe">
       <h1>Save Safe Case Study</h1>
         <h2>Cloud storage app for the everyday saver.</h2>
-        <a class="SaveSafe-Prototype-Button" href="https://www.figma.com/proto/QVsmUi4h7M5WoKbPxkUsWfOB/Save-Safe-Desktop-Macbook-Pro?node-id=261%3A0&viewport=495%2C303%2C0.0218388&scaling=scale-down ">Prototype</a>
+        <a class="SaveSafe-Prototype-Button" href="https://www.figma.com/proto/QVsmUi4h7M5WoKbPxkUsWfOB/Save-Safe-Desktop-Macbook-Pro?node-id=1%3A2&viewport=569%2C303%2C0.021838771179318428&scaling=scale-down"target="_blank">Desktop Prototype</a>
+        <a class="SaveSafe-PrototypeMobile-Button" href="https://www.figma.com/proto/GkyEFTgMVzOmM9x5aUKXwzPY/Save-Safe-Mobile-iPhone-8?node-id=1%3A1589&viewport=504%2C372%2C0.02803315594792366&scaling=scale-down"target="_blank">Mobile Prototype</a>
       <img class="hero-image" src="images/case-study-hero-photo.jpg" alt="Case Study Hero Photo"/>
     </div>
+    <div class="save-safe-mobile-image" id="image-save-safe">
+      <img class="Save-Safe-Mobile" src="images/mobile-save-safe.jpg" alt="mobile-save-safe"/>
+</div>
 <!-- OVERVIEW SECTION --------------------------------------------------------->
   <section class="Overview">
       <h1>Overview</h1>
@@ -70,61 +74,140 @@ gtag('config', 'UA-141214791-1');
     <h1>Problem</h1>
       <h3 class="top-line-problem">There was multiple items needed to be solved for this project.</h3>
         <ul>
+          <li class="overview-bold">1.</li>
           <li class="ProblemLine-1">Create name or brand</li>
+          <li class="overview-bold">2.</li>
           <li class="problem-2">Save content</li>
+          <li class="overview-bold">3.</li>
           <li class="ProblemLine-1">What platform</li>
+          <li class="overview-bold">4.</li>
           <li class="problem-4">Organize content</li>
+          <li class="overview-bold">5.</li>
           <li class="ProblemLine-1">Target audience</li>
+          <li class="overview-bold">6.</li>
           <li class="problem-6">Create new content</li>
+          <li class="overview-bold">7.</li>
           <li class="ProblemLine-1">Collaboration</li>
+          <li class="overview-bold">8.</li>
           <li class="problem-8">Upload new files</li>
        </ul>
-        <h3 class="bottom-line-problem">These are all problems that needed to be solved for this project. </h3>
   </section>
 <!-- SOLUTION SECTION --------------------------------------------------------->
 <section class="Solution">
    <h1>Solution</h1>
      <p>A easy to use cloud storage service called Save Safe. This application is great for every type of user that allows you to save, edit and organize your data on the go. </p>
+     <a class="SaveSafe-Prototype1-Button" href="https://www.figma.com/proto/QVsmUi4h7M5WoKbPxkUsWfOB/Save-Safe-Desktop-Macbook-Pro?node-id=1%3A2&viewport=569%2C303%2C0.021838771179318428&scaling=scale-down"target="_blank">Desktop Prototype</a>
+     <a class="SaveSafe-Prototype2-Button" href="https://www.figma.com/proto/GkyEFTgMVzOmM9x5aUKXwzPY/Save-Safe-Mobile-iPhone-8?node-id=1%3A1589&viewport=504%2C372%2C0.02803315594792366&scaling=scale-downtarget="target="_blank">Mobile Prototype</a>
+</section>
+<section class="Solution-Image">
+  <img class="solution-image-project" src="images/mobile-solution.jpg" alt="solution image mobile"/>
 </section>
 <!-- PROCESS SECTION ---------------------------------------------------------->
 <section class="Process-Section">
   <h1>Process</h1>
      <p> The cloud storage service is growing and the client seen a opening that allowed users to save everything in one location, but needed help laying and designing this application. This is where I came in, I used the following tools to develop what was needed for Save Safe.</p>
   <ul class="Process-List">
-    <li class="process-1">User Surveys</li>
-    <li class="process-2">SWOT Analysis </li>
-    <li class="process-1">User Personas </li>
-    <li class="process-4">User Stories </li>
-    <li class="process-1">User Flows</li>
-    <li class="process-6">Wireframes </li>
-    <li class="process-1">Analysis of Testing </li>
-    <li class="process-8">Mockups </li>
-    <li class="process-1">Branding Work </li>
-    <li class="process-10">Typeface </li>
-    <li class="process-1">Prototype</li>
+    <li class="process-1">- User Surveys</li>
+    <li class="process-2">- SWOT Analysis </li>
+    <li class="process-1">- User Personas </li>
+    <li class="process-4">- User Stories </li>
+    <li class="process-1">- User Flows</li>
+    <li class="process-6">- Wireframes </li>
+    <li class="process-1">- Analysis of Testing </li>
+    <li class="process-8">- Mockups </li>
+    <li class="process-1">- Branding Work </li>
+    <li class="process-10">- Typeface </li>
+    <li class="process-1">- Prototype</li>
   </ul>
 </section>
 <!-- USER SURVEY SECTION ------------------------------------------------------>
 <section class="User-Surveys-Section">
   <h1>User Surveys</h1>
      <p>I conducted user surveys to help better understand what the users want in a cloud storage application. During this test it gave me inside on if this application will be used for desktop or desktop and mobile. It also helped me find what our target audience will be for this application. I asked the users about collaboration and what every user is looking for in their cloud storage application. This is a great tool to get started figuring out what needs to be in each site.</p>
+     <a class="SaveSafe-Survey-Button" href="https://docs.google.com/forms/d/1cXu5NNsYf_OmmZJsqkaSUl8Kuld84HsCwEcf4b8Nj-c/prefill"target="_blank">User Surveys</a>
+     <a class="SaveSafe-Responses-Button" href="https://docs.google.com/forms/d/1cXu5NNsYf_OmmZJsqkaSUl8Kuld84HsCwEcf4b8Nj-c/edit#responses"target="_blank">Responses</a>
 </section>
 <!-- SWOT ANALYSIS SECTION ---------------------------------------------------->
 <section class="SWOT-Analysis-Section">
   <h1>SWOT Analysis</h1>
      <p>I did a competitive analysis on Google Drive, Dropbox and Pinterest. I learned what works and what doesn’t work for the users. Doing these analysis allow me be better understand what the users need for Save Safe.</p>
+     <a class="SaveSafe-SWOT-Dropbox-Button" href="https://docs.google.com/document/d/16NMVTrKmr75oCOgXNasCgtyrAYqmy2ZBFeJnooty06o/edit?usp=sharing"target="_blank">Dropbox</a>
+     <a class="SaveSafe-SWOT-GoogleDrive-Button" href="https://docs.google.com/document/d/1usfCJv3pBw3rQHO9zz6A5M9n9Zm_rVpr5MnRBJcUT0U/edit?usp=sharing"target="_blank">Google Drive</a>
+     <a class="SaveSafe-SWOT-Pinterest-Button" href="https://docs.google.com/document/d/1P5i736uPDPtShuqC2x2dIsk1nmKoiYH1bgGSsCjn5Js/edit?usp=sharing"target="_blank">Pinterest</a>
 </section>
 <!-- PERSONA SECTION ---------------------------------------------------------->
 <section class="Personas-Section">
   <h1>Personas</h1>
      <p>User Personas showed me about what type of users will want to use this application. It allowed me to see the age difference and goals of each user and how each user may not use the application the same way. </p>
   <img class="Persona-Image-Section" src="images/persona-section-photo.jpg" alt="Persona Section Photo"/>
-  <img class="joe-persona-images" src="images/personas-save-safe.jpg" alt="Personas"/>
+  <a class="SaveSafe-Personas-Button" href="https://drive.google.com/drive/folders/1YuPMO7FSR282KpVzbPTsWP8Ysy44tDEb?usp=sharing"target="_blank">Personas</a>
+</section>
+<section class="Personas-Leanne">
+  <h2 class="Everyday-User">Everyday User</h2>
+  <h2 class="name-persona">Leanne, Age: 29</h2>
+  <h2 class="Job">Insurance Rep. Munising, MI</h2>
+  <img class="leanne-image" src="images/leanne-Image.png" alt="Leanne Persona Photo"/>
+  <h2 class="Motivations">Motivations</h2>
+    <ul class="Motivations-p">Leanne uses cloud storage service mostly for personal use. With being a insurance representative, she shares data with clients and other coworkers at times. She takes a-lot of photos of her kids and wishes she had a better way to edit and organize her photos on her cloud storage. Her current cloud storage is very hard to understand what is saved and wants a application that is easer to understand. With a busy life style of working full time and tasing kids she forgets what she as already stored in her cloud storage, so a notification would be nice so she doesn’t take up more space then needed.</ul>
+<h2 class="Goals">Goals</h2>
+ <ul class="Goal-List">
+   <li>- Edit images</li>
+   <li>- View on  multiple devices</li>
+   <li>- Easier way to organize data</li>
+   <li>- Easy way to share data</li>
+   <li>- Alert if data is already in storage</li>
+   <li>- Easy way to such for data</li>
+   <li>- Edit content on cloud</li>
+   <li>- Ability to add notes to content</li>
+ </ul>
+<h2 class="Frustrations">Frustrations</h2>
+ <ul class="Fristrations-List">
+   <li>- More free storage</li>
+   <li>- Better security</li>
+   <li>- Better way to edit data on cloud</li>
+   <li>- Easier way to view data</li>
+   <li>- Easier way to share data</li>
+   <li>- Better way to save websites</li>
+   <li>- Better way to organize websites</li>
+   <li>- Have one application to save everything</li>
+ </ul>
+<h2 class="BIO">BIO</h2>
+  <ul class="BIO-p">Leanne is a full time insurance representative with two kids. She loves spending time with her family. She is constantly taking photos with her phone to make photo albums for her kids for keep sakes. She spends a-lot of time shopping online because its hard for her to go shopping in the store with the two younger kids. Leanne loves cooking dinner for her family and friends and loves trying new foods. </ul>
+</section>
+
+<section class="Personas-Joe">
+  <h2 class="Non-User">Non User</h2>
+  <h2 class="name-persona-2">Joe, Age: 50</h2>
+  <h2 class="Job-2">Retured Marquette, MI</h2>
+  <img class="leanne-image" src="images/persona-joe.png" alt="Joe Persona Photo"/>
+  <h2 class="Motivations">Motivations</h2>
+    <ul class="Motivations-p">Joe currently doesn’t use cloud storage service. He didn’t know there was such a thing to store his data online, but finds it very interesting and would be something he would consider using. With sharing photos with his kids he finds it very interesting to be able to store and share information all in one space. Joe also loves the idea of being able to write his book online and it saving right away. Also being able to access the documents any wear is a big plus, with being retired he could write his book any wear he wanted.</ul>
+<h2 class="Goals">Goals</h2>
+ <ul class="Goal-List">
+   <li>- Edit Images</li>
+   <li>- Share Photos</li>
+   <li>- Edit Data On The Go</li>
+   <li>- Access On Multiple Devices</li>
+   <li>- Top Security</li>
+   <li>- Large Free Space</li>
+ </ul>
+<h2 class="Frustrations-2">Frustrations</h2>
+ <ul class="Fristrations-List">
+   <li>- Free Space</li>
+   <li>- Security</li>
+   <li>- A Easy Application To Understand</li>
+   <li>- On The Go Ability</li>
+   <li>- Multi Device Access</li>
+   <li>- Tutorial Of How The Site Works</li>
+ </ul>
+<h2 class="BIO">BIO</h2>
+  <ul class="BIO-p">Joe is recently retired and loves spending his new free time outdoors. With living in Michigan there is a lot of fun things to do outside. He loves hiking and camping with his wife. Joe has two kids that are older and live far away, but loves to stay in touch with his kids. He loves sending the photos of the new events he is partaking in. While he is a outdoors man Joe also loves to write and currently writing a book on the unique water falls in the area.  </ul>
 </section>
 <!-- USER STORIES SECTION ----------------------------------------------------->
 <section class="User-Stories-Section">
   <h1>User Stories</h1>
      <p>When creating the user stories for this application I wanted to display the main functions a user may do during the use on this application. This gives me the ability to see what needs to be done on the application and what is the main goals for the users. This gives me an easier way to break down what pages are needed to develop this cloud storage service.</p>
+     <a class="SaveSafe-UserStory-Button" href="https://docs.google.com/spreadsheets/d/1GAu3MEPj2gDavMavubHI6zSVU4MsFdNOMe51J1oyY0c/edit?usp=sharing"target="_blank">User Stories</a>
 </section>
 <!-- USER FLOWS SECTION ------------------------------------------------------->
 <section class="User-Flows-Section">
@@ -137,8 +220,12 @@ gtag('config', 'UA-141214791-1');
 <section class="Wireframes-Section">
   <h1>Wireframes</h1>
      <p>Wireframes are a great way to figure out if the user finds the layout simple or hard to understand without putting a lot of effort into the design process of this application. </p>
+     <a class="SaveSafe-Wireframe-Button" href="https://www.figma.com/file/dKDASryVyKoD1uFIS2q1d80s/Cloud-Storage-Service-Wireframe?node-id=1%3A2"target="_blank">Wireframe</a>
      <img class="Wireframe-image" src="images/wireframes-image.jpg" alt="Wireframe Section Image"/>
-   <img class="Wireframe-Images" src="images/wireframes.png" alt="Wireframe Drawings"/>
+     <img class="Wireframe-mobile" src="images/wireframe.jpg" alt="Wireframe Mobile"/>
+   <img class="Wireframe-Images" src="images/sketch-portfolio-SaveSafe.jpg" alt="Wireframe Drawings"/>
+   <img class="Wireframe-Digital" src="images/Wireframes-SaveSafe-Digital.jpg" alt="Wireframe Digital"/>
+
 </section>
 <!-- ANALYSIS OF TEST SECTION ------------------------------------------------->
 <section class="Analysis-of-Test-Section">
@@ -156,13 +243,18 @@ gtag('config', 'UA-141214791-1');
 <section class="Mockup-Section">
   <h1>Mockups</h1>
      <p>My First Mockups some of my colors used in the application didn’t  work well together for every user. I tested the new colors against each other to make sure they work well for each user and they did. </p>
+     <a class="SaveSafe-Mockup-Mobile-Button" href="https://drive.google.com/drive/folders/1KrckPmm8MuFcVojUqOPp5Kd1nEuySwon?usp=sharing"target="_blank">Mobile</a>
+     <a class="SaveSafe-Mockup-Desktop-Button" href="https://drive.google.com/drive/folders/1Wu4M8xWmuZTWISvXom1oHXnspj2_wHGO?usp=sharing"target="_blank">Desktop</a>
      <img class="Mockup-Image" src="images/mockups-photo.jpg" alt="Mockup Photo Section"/>
+     <img class="Mockup-portfolio" src="images/mockups-for-portfolio.jpg" alt="mockup-portfolio"/>
    <img class="Mockup-Image-Digital" src="images/mockups-save-safe.jpg" alt="Mockups Photo"/>
 </section>
 <!-- BRANDING SECTION --------------------------------------------------------->
 <section class="Branding-Section">
   <h1>Branding</h1>
-      <p> At first glance I want the user to feel this security of this brand. I did a lot of sketches until I came up with the lock cloud logo. The logo with the  blue color scheme will give the users a feeling of trust and experience. We would like to name the brand SAVE SAFE. The name Save Safe says it all about the brand and what this application is designed for, to save and keep safe. All the elements together will play great to deliver the feeling and message to the potential users that they can save everything in a safe and secure area with a easy and fresh feeling.</p>
+      <p> At first glance I want the user to feel this security of this brand. I did a lot of sketches until I came up with the lock cloud logo. The logo with the  blue color scheme will give the users a feeling of trust and experience. We would like to name the brand SAVE SAFE. The name Save Safe says it all about the brand and what this application is designed for, to save and keep safe. All the elements together will play great to deliver the feeling and message to the potential users that
+      they can save everything in a safe and secure area with a easy and fresh feeling.</p>
+      <a class="SaveSafe-Branding-Button" href="https://www.figma.com/file/PEcgP7xEevgKq7D0W9P8Qhx2/Save-Safe-Style-Guide"target="_blank">Style Guide</a>
    <img class="sketching-of-logo" src="images/sketching-for-logo.png" alt="Sketching for Logo Image"/>
    <img class="color-info" src="images/color-case-study.png" alt="Color Image"/>
    <img class="Mobile-logo-digital" src="images/logos-save-safe.png" alt="Logo Digital Image"/>
@@ -179,7 +271,13 @@ gtag('config', 'UA-141214791-1');
 <section class="Prototype">
   <h1>Prototype</h1>
     <p>Great feedback about names and functions that needed to be added to this application to make it easier for the user.I also needed to add a photo group area to this application.</p>
+    <a class="SaveSafe-Prototype-Mobile-Button" href="https://www.figma.com/proto/GkyEFTgMVzOmM9x5aUKXwzPY/Save-Safe-Mobile-iPhone-8?node-id=1%3A1589&viewport=504%2C372%2C0.02803315594792366&scaling=scale-downtarget="target="_blank">Mobile</a>
+    <a class="SaveSafe-Prototype-Desktop-Button" href="https://www.figma.com/proto/QVsmUi4h7M5WoKbPxkUsWfOB/Save-Safe-Desktop-Macbook-Pro?node-id=1%3A2&viewport=569%2C303%2C0.021838771179318428&scaling=scale-down"target="_blank">Desktop</a>
       <img class="Prototype-image" src="images/prototype-photo.jpg" alt="Prototype Photo"/>
+</section>
+<!-- PROTOTYPE IMAGE SECTOIN -------------------------------------------------------->
+<section class="Prototype-Image">
+  <img class="Prototype-lake" src="images/lake.jpg" alt="lake photo"/>
 </section>
 <!-- ANALYSIS OF TEST --------------------------------------------------------->
 <section class="Analysis-of-Test-2">
@@ -197,6 +295,8 @@ gtag('config', 'UA-141214791-1');
 <section class="Conclusion">
   <h1>Conclusion</h1>
     <p>Save Safe was a project that taught me the importance of testing throughout this design process. User testing helped me to determine what needed to happen to make this application successful. Testing allowed for quick interaction and discovery of unidentified problems which resulted in a far improved final product and inspired a more informed solution. With research and more testing it allowed me to develop a great brand for Save Safe to develop an application that not only looks great for the users but works great also. </p>
+    <a class="SaveSafe-Conclusion1-Button" href="https://www.figma.com/proto/QVsmUi4h7M5WoKbPxkUsWfOB/Save-Safe-Desktop-Macbook-Pro?node-id=1%3A2&viewport=569%2C303%2C0.021838771179318428&scaling=scale-down"target="_blank">Desktop Prototype</a>
+    <a class="SaveSafe-Conclusion2-Button" href="https://www.figma.com/proto/GkyEFTgMVzOmM9x5aUKXwzPY/Save-Safe-Mobile-iPhone-8?node-id=1%3A1589&viewport=504%2C372%2C0.02803315594792366&scaling=scale-downtarget="target="_blank">Mobile Prototype</a>
 </section>
 <!--- LET'S TALK LINK FOOTER SECTION ------------------------------------------>
   <div class="footer">
