--- a/journey.html
+++ b/journey.html
@@ -39,7 +39,7 @@
              <ul class="menu">
                <li><a href='journey.html'>About</a></li>
                <li><a href='project.html'>Work</a></li>
-               <li><a href='images/resume'>Resume</a></li>
+               <li><a href="https://drive.google.com/file/d/1IN3a5cMirByidJ79lb_spfK-VHmEiCvX/view?usp=sharing" target="_blank">Resume</a><li>
                <li><a href='#Contact'>Contact</a></li>
             </ul>
           </header>
