--- a/project.html
+++ b/project.html
@@ -146,7 +146,7 @@ gtag('config', 'UA-141214791-1');
   <h2 class="Everyday-User">Everyday User</h2>
   <h2 class="name-persona">Leanne, Age: 29</h2>
   <h2 class="Job">Insurance Rep. Munising, MI</h2>
-  <img class="leanne-image" src="images/leanne-Image.png" alt="Leanne Persona Photo"/>
+  <img class="leanne-image" src="images/Leanne-Image.png" alt="Leanne Persona Photo"/>
   <h2 class="Motivations">Motivations</h2>
     <ul class="Motivations-p">Leanne uses cloud storage service mostly for personal use. With being a insurance representative, she shares data with clients and other coworkers at times. She takes a-lot of photos of her kids and wishes she had a better way to edit and organize her photos on her cloud storage. Her current cloud storage is very hard to understand what is saved and wants a application that is easer to understand. With a busy life style of working full time and tasing kids she forgets what she as already stored in her cloud storage, so a notification would be nice so she doesn’t take up more space then needed.</ul>
 <h2 class="Goals">Goals</h2>
