--- a/project.html
+++ b/project.html
@@ -123,14 +123,14 @@ gtag('config', 'UA-141214791-1');
 <!-- USER SURVEY SECTION ------------------------------------------------------>
 <section class="User-Surveys-Section">
   <h1>User Surveys</h1>
-     <p>I conducted user surveys to help better understand what the users want in a cloud storage application. During this test it gave me inside on if this application will be used for desktop or desktop and mobile. It also helped me find what our target audience will be for this application. I asked the users about collaboration and what every user is looking for in their cloud storage application. This is a great tool to get started figuring out what needs to be in each site.</p>
+     <p>Conducted user surveys to help better understand what the users want in a cloud storage application. During this test it gave inside on if this application will be used for desktop or desktop and mobile. It also helped find what our target audience will be for this application. Asking the users about collaboration and what every user is looking for in their cloud storage application. This is a great tool to get started figuring out what needs to be in each site.</p>
      <a class="SaveSafe-Survey-Button" href="https://docs.google.com/forms/d/1cXu5NNsYf_OmmZJsqkaSUl8Kuld84HsCwEcf4b8Nj-c/prefill"target="_blank">User Surveys</a>
      <a class="SaveSafe-Responses-Button" href="https://docs.google.com/forms/d/1cXu5NNsYf_OmmZJsqkaSUl8Kuld84HsCwEcf4b8Nj-c/edit#responses"target="_blank">Responses</a>
 </section>
 <!-- SWOT ANALYSIS SECTION ---------------------------------------------------->
 <section class="SWOT-Analysis-Section">
   <h1>SWOT Analysis</h1>
-     <p>I did a competitive analysis on Google Drive, Dropbox and Pinterest. I learned what works and what doesn’t work for the users. Doing these analysis allow me be better understand what the users need for Save Safe.</p>
+     <p>Conducting  an competitive analysis on Google Drive, Dropbox and Pinterest. Learning what works and what doesn’t work for the users. Doing these analysis allow better understanding what the users need for Save Safe.</p>
      <a class="SaveSafe-SWOT-Dropbox-Button" href="https://docs.google.com/document/d/16NMVTrKmr75oCOgXNasCgtyrAYqmy2ZBFeJnooty06o/edit?usp=sharing"target="_blank">Dropbox</a>
      <a class="SaveSafe-SWOT-GoogleDrive-Button" href="https://docs.google.com/document/d/1usfCJv3pBw3rQHO9zz6A5M9n9Zm_rVpr5MnRBJcUT0U/edit?usp=sharing"target="_blank">Google Drive</a>
      <a class="SaveSafe-SWOT-Pinterest-Button" href="https://docs.google.com/document/d/1P5i736uPDPtShuqC2x2dIsk1nmKoiYH1bgGSsCjn5Js/edit?usp=sharing"target="_blank">Pinterest</a>
@@ -138,7 +138,7 @@ gtag('config', 'UA-141214791-1');
 <!-- PERSONA SECTION ---------------------------------------------------------->
 <section class="Personas-Section">
   <h1>Personas</h1>
-     <p>User Personas showed me about what type of users will want to use this application. It allowed me to see the age difference and goals of each user and how each user may not use the application the same way. </p>
+     <p>User Personas show what type of users will want to use this application. It allows us to see the age difference and goals of each user and how each user may not use the application the same way.</p>
   <img class="Persona-Image-Section" src="images/persona-section-photo.jpg" alt="Persona Section Photo"/>
   <a class="SaveSafe-Personas-Button" href="https://drive.google.com/drive/folders/1YuPMO7FSR282KpVzbPTsWP8Ysy44tDEb?usp=sharing"target="_blank">Personas</a>
 </section>
@@ -148,7 +148,7 @@ gtag('config', 'UA-141214791-1');
   <h2 class="Job">Insurance Rep. Munising, MI</h2>
   <img class="leanne-image" src="images/Leanne-Image.png" alt="Leanne Persona Photo"/>
   <h2 class="Motivations">Motivations</h2>
-    <ul class="Motivations-p">Leanne uses cloud storage service mostly for personal use. With being a insurance representative, she shares data with clients and other coworkers at times. She takes a-lot of photos of her kids and wishes she had a better way to edit and organize her photos on her cloud storage. Her current cloud storage is very hard to understand what is saved and wants a application that is easer to understand. With a busy life style of working full time and tasing kids she forgets what she as already stored in her cloud storage, so a notification would be nice so she doesn’t take up more space then needed.</ul>
+    <ul class="Motivations-p">Leanne uses cloud storage service mostly for personal use. With being a insurance representative, she shares data with clients and other coworkers at times. She takes a-lot of photos of her kids and wishes she had a better way to edit and organize her photos on her cloud storage. Her current cloud storage is very hard to understand what is saved, and wants a application that is easer to understand. With a busy life style of working full time and raising kids she forgets what she as already stored in her cloud storage, so a notification would be nice so she doesn’t take up more space then needed.</ul>
 <h2 class="Goals">Goals</h2>
  <ul class="Goal-List">
    <li>- Edit images</li>
@@ -195,24 +195,26 @@ gtag('config', 'UA-141214791-1');
  <ul class="Fristrations-List">
    <li>- Free Space</li>
    <li>- Security</li>
-   <li>- A Easy Application To Understand</li>
+   <li>- An Easy Application To Understand</li>
    <li>- On The Go Ability</li>
    <li>- Multi Device Access</li>
    <li>- Tutorial Of How The Site Works</li>
  </ul>
 <h2 class="BIO">BIO</h2>
-  <ul class="BIO-p">Joe is recently retired and loves spending his new free time outdoors. With living in Michigan there is a lot of fun things to do outside. He loves hiking and camping with his wife. Joe has two kids that are older and live far away, but loves to stay in touch with his kids. He loves sending the photos of the new events he is partaking in. While he is a outdoors man Joe also loves to write and currently writing a book on the unique water falls in the area.  </ul>
+  <ul class="BIO-p">Joe is recently retired and loves spending his new free time outdoors. With living in Michigan there is a lot of fun things to do outside. He loves hiking and camping with his wife. Joe has two kids that are older and live far away, but loves to stay in touch with his kids. He loves sending  photos of the new events he is partaking in. While he is a outdoors man Joe also loves to write and currently writing a book on the unique water falls in the area.
+ </ul>
 </section>
 <!-- USER STORIES SECTION ----------------------------------------------------->
 <section class="User-Stories-Section">
   <h1>User Stories</h1>
-     <p>When creating the user stories for this application I wanted to display the main functions a user may do during the use on this application. This gives me the ability to see what needs to be done on the application and what is the main goals for the users. This gives me an easier way to break down what pages are needed to develop this cloud storage service.</p>
+     <p>When creating the user stories for this application we wanted to display the main functions a user may perform during the use of this application. This gives us the ability to see what needs to be done on the application and what is the main goals for the users. This is an easier way to break down what pages are needed to develop this cloud storage service.</p>
      <a class="SaveSafe-UserStory-Button" href="https://docs.google.com/spreadsheets/d/1GAu3MEPj2gDavMavubHI6zSVU4MsFdNOMe51J1oyY0c/edit?usp=sharing"target="_blank">User Stories</a>
 </section>
 <!-- USER FLOWS SECTION ------------------------------------------------------->
 <section class="User-Flows-Section">
   <h1>User Flows</h1>
-     <p>I designed user flows after the following tests and research to figure out what would be the best and easiest way to complete high priority tasks for the user. This allows me to make changes easier before designing and layout every page needed.</p>
+     <p>Designing user flows after the following tests and research to figure out what would be the best and easiest way to complete high priority tasks for the user. This allows use to make changes easier before designing and layout every page needed.
+</p>
     <img class="UserFlow-Images" src="images/user-flows.png" alt="User Flow Sketches"/>
 
 </section>
@@ -232,17 +234,17 @@ gtag('config', 'UA-141214791-1');
   <h1>Analysis of Test</h1>
     <ul>
       <li class="test-1">Test 1</li>
-      <li class="test-1-info">During the first test, the tester worked Through the functions well. The tester had a hard time understanding some of the names of the buttons so this is something I needed to go back and work on.</li>
+      <li class="test-1-info">During the first test, the tester worked through the functions well. The tester had a hard time understanding some of the names of the buttons, so this is something that needed to be addressed.</li>
       <li class="test-2">Test 2</li>
-      <li class="test-2-info">Overall this testers process went well. The tester didn't know how to organize photos, so I would like to figure out a better way to organize the photos into groups for the users.</li>
+      <li class="test-2-info">Overall this testers process went well. The tester didn't know how to organize photos, so we needed to figure out a better way to organize the photos into groups for the users.</li>
       <li class="test-3">Test 3</li>
-      <li class="test-3-info">During this usability test I learned that I could work on the name of the buttons. For they where confusing for this tester. </li>
+      <li class="test-3-info">During this usability test we learned that the names of the buttons could be better. For they where confusing for this tester. </li>
    </ul>
 </section>
 <!-- MOCKUP SECTION ----------------------------------------------------------->
 <section class="Mockup-Section">
   <h1>Mockups</h1>
-     <p>My First Mockups some of my colors used in the application didn’t  work well together for every user. I tested the new colors against each other to make sure they work well for each user and they did. </p>
+     <p>The first mockups some of the colors used in the application didn’t work well together for every user. We tested the new colors against each other to make sure they work well for each user and they did. </p>
      <a class="SaveSafe-Mockup-Mobile-Button" href="https://drive.google.com/drive/folders/1KrckPmm8MuFcVojUqOPp5Kd1nEuySwon?usp=sharing"target="_blank">Mobile</a>
      <a class="SaveSafe-Mockup-Desktop-Button" href="https://drive.google.com/drive/folders/1Wu4M8xWmuZTWISvXom1oHXnspj2_wHGO?usp=sharing"target="_blank">Desktop</a>
      <img class="Mockup-Image" src="images/mockups-photo.jpg" alt="Mockup Photo Section"/>
@@ -252,8 +254,7 @@ gtag('config', 'UA-141214791-1');
 <!-- BRANDING SECTION --------------------------------------------------------->
 <section class="Branding-Section">
   <h1>Branding</h1>
-      <p> At first glance I want the user to feel this security of this brand. I did a lot of sketches until I came up with the lock cloud logo. The logo with the  blue color scheme will give the users a feeling of trust and experience. We would like to name the brand SAVE SAFE. The name Save Safe says it all about the brand and what this application is designed for, to save and keep safe. All the elements together will play great to deliver the feeling and message to the potential users that
-      they can save everything in a safe and secure area with a easy and fresh feeling.</p>
+      <p> At first glance we want the user to feel this security of this brand. Doing a lot of sketches until we came up with the lock cloud logo. The logo with the blue color scheme will give the users a feeling of trust and experience. We would like to name the brand SAVE SAFE. The name Save Safe says it all about the brand and what this application is designed for, to save and keep safe. All the elements together will play great to deliver the feeling and message to the potential users that they can save everything in a safe and secure area with a easy and fresh feeling.</p>
       <a class="SaveSafe-Branding-Button" href="https://www.figma.com/file/PEcgP7xEevgKq7D0W9P8Qhx2/Save-Safe-Style-Guide"target="_blank">Style Guide</a>
    <img class="sketching-of-logo" src="images/sketching-for-logo.png" alt="Sketching for Logo Image"/>
    <img class="color-info" src="images/color-case-study.png" alt="Color Image"/>
@@ -262,15 +263,15 @@ gtag('config', 'UA-141214791-1');
 <!-- TYPFACE SECTION ---------------------------------------------------------->
 <section class="Typeface-Section">
   <h1>Typeface</h1>
-     <p class="Plantagenet-Cherokee-font-into">I chose Plantagenet Cherokee as one of the options for the brand typeface because it is a serif humanist font. This font is dressy with the feet on all letters, when displayed in a capital display. This font also has uneven lines, which gives it a feeling of strong and elegant all at the same time.</p>
+     <p class="Plantagenet-Cherokee-font-into">Choosing Plantagenet Cherokee as one of the options for the brand typeface because it is a serif humanist font. This font is dressy with the feet on all letters, when displayed in a capital display. This font also has uneven lines, which gives it a feeling of strong and elegant all at the same time.</p>
      <p class="Plantagenet-Cherokee-font">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz 0123456789</p>
-     <p class="Ovo-font-info">I paired it with a complementary typeface that plays well with my brand typeface. I chose Ovo as the complementary typeface because it is also an elegant and strong font but with lines that are not so vague. This font is also a serif humanist with the feet also giving it a dressy feeling. </p>
+     <p class="Ovo-font-info">Pairing it with a complementary typeface that plays well with the brand typeface. Choosing Ovo as the complementary typeface because it is also an elegant and strong font but with lines that are not so vague. This font is also a serif humanist with the feet also giving it a dressy feeling. </p>
      <p class="Ovo-font">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz 0123456789</p>
 </section>
 <!-- PROTOTYPE SECTOIN -------------------------------------------------------->
 <section class="Prototype">
   <h1>Prototype</h1>
-    <p>Great feedback about names and functions that needed to be added to this application to make it easier for the user.I also needed to add a photo group area to this application.</p>
+    <p>Great feedback about names and functions that needed to be added to this application to make it easier for the user. Also we needed to add a photo group area to this application.</p>
     <a class="SaveSafe-Prototype-Mobile-Button" href="https://www.figma.com/proto/GkyEFTgMVzOmM9x5aUKXwzPY/Save-Safe-Mobile-iPhone-8?node-id=1%3A1589&viewport=504%2C372%2C0.02803315594792366&scaling=scale-downtarget="target="_blank">Mobile</a>
     <a class="SaveSafe-Prototype-Desktop-Button" href="https://www.figma.com/proto/QVsmUi4h7M5WoKbPxkUsWfOB/Save-Safe-Desktop-Macbook-Pro?node-id=1%3A2&viewport=569%2C303%2C0.021838771179318428&scaling=scale-down"target="_blank">Desktop</a>
       <img class="Prototype-image" src="images/prototype-photo.jpg" alt="Prototype Photo"/>
@@ -284,17 +285,17 @@ gtag('config', 'UA-141214791-1');
   <h1>Analysis of Test</h1>
     <ul>
       <li class="test2-one">Test 1</li>
-      <li class="test2-one-info">Overall the test went very well. The tester didn’t have any issue with completing any of the tasks. The one thing that I thought of after going over all of the tests and questions asked, is the Drag and Drop page. This works well for a desktop layout but for mobile it doesn't work for the user. </li>
+      <li class="test2-one-info">Overall the test went very well. The tester didn’t have any issue with completing any of the tasks. The one thing that needed to be addressed is the Drag and Drop page. This works well for a desktop layout but for mobile it doesn't work for the user. </li>
       <li class="test2-two">Test 2</li>
-      <li class="test2-two-info">After this test I went over all of my results. I found out that I don’t have an area where users can view groups of images. This would be a great thing to add to the dashboard page for the users. I am going to play with some ideas on where to place this function to make it easy for the users to view.</li>
+      <li class="test2-two-info">After this test going over all of the results, finding out that we don’t have an area where users can view groups of images. This would be a great thing to add to the dashboard page for the users. Playing with some ideas on where to place this function to make it easy for the users to view.</li>
       <li class="test2-three">Test 3</li>
-      <li class="test2-three-info">During this test I wrote down some items that I need to look into to make it less confusing for the users. The name in the new link I need to review. The names on the buttons don’t seem to be clear to the users so I would like to look into better names for those buttons. Also the groups for images again. I need to find a good location for those groups to be located for the users.</li>
+      <li class="test2-three-info">During this test there was some items that needed to be looked into to make it less confusing for the users. The name in the new link needed to be reviewed. The names on the buttons don’t seem to be clear to the users so we would like to look into better names for those buttons. Also the groups for images again. Needing to find a good location for those groups to be located for the users.</li>
    </ul>
 </section>
 <!-- CONCLUSION SECTION ------------------------------------------------------->
 <section class="Conclusion">
   <h1>Conclusion</h1>
-    <p>Save Safe was a project that taught me the importance of testing throughout this design process. User testing helped me to determine what needed to happen to make this application successful. Testing allowed for quick interaction and discovery of unidentified problems which resulted in a far improved final product and inspired a more informed solution. With research and more testing it allowed me to develop a great brand for Save Safe to develop an application that not only looks great for the users but works great also. </p>
+    <p>Save Safe was a project that taught me the importance of testing throughout this design process. User testing helped determine what needed to happen to make this application successful. Testing allowed for quick interaction and discovery of unidentified problems which resulted in a far improved final product and inspired a more informed solution. With research and more testing it allowed to develop a great brand for Save Safe to develop an application that not only looks great for the users but works great also. </p>
     <a class="SaveSafe-Conclusion1-Button" href="https://www.figma.com/proto/QVsmUi4h7M5WoKbPxkUsWfOB/Save-Safe-Desktop-Macbook-Pro?node-id=1%3A2&viewport=569%2C303%2C0.021838771179318428&scaling=scale-down"target="_blank">Desktop Prototype</a>
     <a class="SaveSafe-Conclusion2-Button" href="https://www.figma.com/proto/GkyEFTgMVzOmM9x5aUKXwzPY/Save-Safe-Mobile-iPhone-8?node-id=1%3A1589&viewport=504%2C372%2C0.02803315594792366&scaling=scale-downtarget="target="_blank">Mobile Prototype</a>
 </section>
